--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-database:16.0.1'
 
+    compile group: 'cz.msebera.android' , name: 'httpclient' , version: '4.4.1.2'
 
 }
 //apply plugins:'com.google.gms.google-services'
