--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,18 @@ android {
         }
     }
 }
+
 android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
+repositories {
+    maven { url 'http://app.profitdeco.com/mobile/' }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
