--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-database:16.0.1'
 
+    compile 'com.google.firebase:firebase-messaging:9.6.0'
     compile group: 'cz.msebera.android', name: 'httpclient', version: '4.4.1.2'
 }
+
 //apply plugins:'com.google.gms.google-services'
 android {
     defaultConfig {
