--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,22 +28,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".fragment.MainActivity"/>
         <activity
             android:name=".StProfActivity"
             android:label="@string/title_activity_st_prof"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".fragment.NotificationOne"
-
             android:label="Details of Notification One"
-
             android:parentActivityName=".LoginActivity">
-
             <meta-data
-
                 android:name="android.support.PARENT_ACTIVITY"
-
                 android:value=".LoginActivity"/>
-
         </activity>
 
         <!--<activity android:name=".fragment.NotificationView"-->
