--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginActivity"/>
         </activity>
-
+        <activity android:name=".fragment.tasakanHome" />
         <!--<activity android:name=".fragment.NotificationView"-->
             <!--android:label="@string/notification_activity"-->
             <!--android:parentActivityName=".StProfActivity">-->
