--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -28,52 +29,83 @@ android {
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+
     implementation 'com.android.support:design:28.0.0-rc02'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     implementation 'com.android.support:support-v4:28.0.0'
+
     implementation 'com.android.support:support-vector-drawable:28.0.0'
+
     implementation 'com.github.arturogutierrez:badges:1.0.5@aar'
+
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+
     compile 'com.squareup.retrofit2:converter-gson:2.+'
+
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+
     compile 'com.squareup.picasso:picasso:2.5.2'
+
     compile 'com.google.code.gson:gson:2.8.2'
 
     provided 'org.glassfish:javax.annotation:10.0-b28'
+
     compile 'com.android.volley:volley:1.1.1'
+
     testCompile 'junit:junit:4.12'
+
     compile 'org.apache.httpcomponents:httpcore:4.4.1'
+
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
     compile 'com.joooonho:selectableroundedimageview:1.0.1'
+
+    //noinspection GradleCompatible
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+
     compile 'com.github.bumptech.glide:glide:4.2.0'
+
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
+
     compile 'com.nex3z:notification-badge:0.1.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
     implementation 'com.amitshekhar.android:android-networking:1.0.1'
+
     implementation 'com.squareup.picasso:picasso:2.71828'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
 
-    implementation 'com.google.firebase:firebase-database:16.0.1'
+    //noinspection GradleCompatible
     compile 'com.android.support:cardview-v7:25.3.1'
 
-    compile 'com.google.firebase:firebase-messaging:9.6.0'
+    //noinspection GradleCompatible
     compile group: 'cz.msebera.android', name: 'httpclient', version: '4.4.1.2'
 
     compile 'com.txusballesteros:bubbles:1.2.1'
+
     compile 'com.nex3z:notification-badge:0.2.0'
+
     compile 'de.hdodenhof:circleimageview:2.1.0'
+
     compile 'org.sufficientlysecure:html-textview:3.2'
+
+    implementation 'com.google.firebase:firebase-database:16.0.1'
 
 }
 
-//apply plugins:'com.google.gms.google-services'
 android {
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
