--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         google()
         jcenter()
         maven {
-            url"https://jitpack.io"
+//            url"https://jitpack.io"
+            url"https://maven.google.com"
         }
     }
     dependencies {
